tests/fixtures/errors/if_without_else_value.chisa
let x = if (true) 1
